fixed grid alignment on graphs

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -251,7 +251,7 @@ textarea {
     display: block;
     margin: auto;
     background: #435AAF;
-    border-radius: 10px;
+    
     margin: 10px;
 }
 
@@ -268,4 +268,12 @@ textarea {
 .admin-font-h3 {
     color: white;
     padding-left: 15px;
+}
+
+.student-report-graph {
+    width: 450px;
+    height: 400px;
+    border: 2px solid white;
+    border-radius:3px;
+
 }
